# hairtone

./: .gitignore  CHANGELOG.md  KNOWN_LIMITATIONS.md  LICENSE  NOTICE.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml  test.yml
examples/: README.md
licenses/: zllrunning-MIT.txt
src/hairtone/: __init__.py  backend.py  cli.py  masks.py  pipeline.py  presets.py  recolor.py  torch_backend.py
src/hairtone/_vendor/: __init__.py
src/hairtone/_vendor/bisenet/: LICENSE  __init__.py  model.py  resnet.py
tests/: test_cli.py  test_image_bomb_guard.py  test_masks.py  test_pipeline.py  test_presets.py  test_recolor.py  test_vendor_bisenet.py
